--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/myShop
+spring.datasource.username=root
+spring.datasource.password=3Dv5TaFr
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=${PORT:8080}
+logging.level.org.atmosphere = warn
+spring.mustache.check-template-location = false
+vaadin.launch-browser=true
+vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
+spring.jpa.defer-datasource-initialization = true
